--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
+<!DOCTYPE HTML>
 <html>
 	<head>
+		<meta charset="utf-8">
 		<title>proyecto git</title>
+		<link rel="stylesheet" href="css/style.css>"
 	</head>
 	<body>
 		<h1>proyecto GIT</h1>
+		<script src="js/main.js"></script>
 	</body>
 
 </html>
